# Nexus-AIOS

./: .gitignore  AUDIT_REPORT.md  App.tsx  GAP_ANALYSIS_REPORT.md  LICENSE  README.md  REMEDIATION_PLAN.md  build-internal.sh  index.html  index.tsx  metadata.json  package.json  types.ts
nexus-app/kernel/: .gitignore  __init__.py  aether.spec  aether_cli.py  auto_reply.py  build.py  cron_service.py  diagnostic_check.py  health_monitor.py  ipc_bridge.py  main.py  mcp_server.py  nexus_kernel.spec  orchestrator.py  plugin_system.py  pyproject.toml  requirements.lock.txt  requirements.txt  runtime_config.py  test_audio.py  test_audio_scan.py  test_voice_full.py  test_voice_minimal.py  verify_gaps.py
nexus-app/kernel/agents/: __init__.py  agent_persistence.py  code_architect.py  crewai_adapter.py  manager_agent.py  monitor_agent.py  qa_engineer.py  researcher.py  security_auditor.py  subagent_registry.py  worker_agent.py
nexus-app/kernel/brain/: __init__.py  cloud_engine.py  compaction.py  intent_dispatcher.py  intent_parser.py  llm_engine.py  model_router.py  planner.py  query_cache.py
nexus-app/kernel/bridge/: ASYNC_BRIDGE.md  __init__.py  async_bridge_client.py  channel_router.py  openclaw_client.py
nexus-app/kernel/hardware/: __init__.py  ebpf_monitor.py  federated_learner.py  npu_accelerator.py  system_stats.py
nexus-app/kernel/linux/: __init__.py  daemon.py  dbus_service.py  nexus_orchestrator.py
nexus-app/kernel/memory/: __init__.py  context_scheduler.py  deep_memory.py  document_indexer.py  lancedb_store.py  memory_manager.py  qmd_manager.py  rag_engine.py  self_learning.py
nexus-app/kernel/security/: __init__.py  intent_dispatcher.py  key_vault.py  log_redact.py  network_firewall.py  os_secret.py  self_destruct.py  trust.py
nexus-app/kernel/skills/: __init__.py  clawhub_adapter.py  docker_sandbox.py  loader.py  semantic_snapshot.py
nexus-app/kernel/supervisor/: __init__.py  ast_audit.py  audit_logger.py  error_kb.py  intent_validator.py  network_firewall.py  safety_checker.py  self_destruct.py  tool_policy.py
nexus-app/kernel/sync/: __init__.py  a2a_protocol.py  memory_sync.py
nexus-app/kernel/tests/: __init__.py  conftest.py  test_agents.py  test_async_bridge_client.py  test_brain.py  test_core_components.py  test_core_regression.py  test_ipc_response.py  test_memory.py  test_phase1_security.py  test_phase2_architecture.py  test_phase6_advanced.py  test_security_hardening.py  test_supervisor.py  test_toolbox.py
nexus-app/kernel/toolbox/: __init__.py  browser_engine.py  cdp_browser_engine.py  file_manager.py  mcp_client_manager.py  media_pipeline.py  notification_tools.py  shell_executor.py  web_automation.py
nexus-app/kernel/voice/: __init__.py  audio_lock.py  orchestrator.py  tts_engine.py  voice_pipeline.py  wake_word_detector.py
nexus-app/src-tauri/: Cargo.toml  check_final.txt  check_output.txt  check_output2.txt  tauri.conf.json
nexus-app/src-tauri/capabilities/: default.json
nexus-app/src-tauri/src/: lib.rs
nexus-app/src-tauri/src/commands/: agent.rs  kernel.rs  memory.rs  mod.rs  ollama.rs  pty.rs  safety.rs  shell.rs  startup.rs  system.rs
nexus-app/src-tauri/src/orchestrator/: ipc_bridge.rs  mod.rs  process_manager.rs  state.rs  (+1 more)
(+189 files in other folders)
