[package]
name = "nexus-app"
version = "0.1.0"
description = "Nexus Hybrid AIOS - An LLM-powered Operating System"
authors = ["Nexus Team"]
edition = "2021"

[lib]
name = "nexus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Regex for safety pattern matching
regex = "1"

# Hostname detection
hostname = "0.4"

# CPU count
num_cpus = "1"

# User directories
dirs = "5"

# System Information
sysinfo = "0.30"

# HTTP client for Ollama download
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Async runtime for spawn_blocking
tokio = { version = "1", features = ["rt", "sync"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
